--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,21 @@
 hibernate.format_sql=false
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
-
+hibernate.hbm2ddl.auto=update
 
 # H2 Database Configuration
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:datajpa
-db.username=sa
-db.password=
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#db.driver=org.h2.Driver
+#db.url=jdbc:h2:mem:datajpa
+#db.username=sa
+#db.password=
 
 # MySQL DB Configuration
-#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#db.driver=com.mysql.jdbc.Driver
-#db.url=jdbc:mysql://localhost:3306/datajpa
-#db.username=user
-#db.password=password
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/searchbox
+db.username=anhnn
+db.password=123456
 
 # PostgreSQL DB Configuration
 #hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -26,6 +25,19 @@ db.password=
 #db.username=user
 #db.password=password
 
+#Execute bootstrap
+searchbox.bootstrap = false
+
+# Update DM on start
+searchbox.dm.update.onstart = false
+
+#solrHome
+# Default Search engine configuration
+searchengine.name = Local Solr Cloud
+searchengine.class = com.searchbox.engine.solr.SolrCloud
+searchengine.prop = zkHost
+searchengine.prop.value = 10.0.1.199:9983
+
 
 #MessageSource
 message.source.basename=i18n/messages
@@ -33,7 +45,7 @@ message.source.use.code.as.default.message=false
 
 
 #Secure the framework:
-use.security=false
+use.security=true
 
 #Facebook
 facebook.app.id=427275374073216
@@ -42,3 +54,7 @@ facebook.app.secret=eb5a4495d4ec3663b21c4336995990ee
 #Twitter
 twitter.consumer.key=
 twitter.consumer.secret=
+
+#DNS configuration
+searchbox.dns = www.opportunity-finder.com
+searchbox.port = 80
