--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,7 @@ twitter.consumer.secret=
 #DNS configuration
 searchbox.dns = www.opportunity-finder.com
 searchbox.port = 80
+
+#Resource
+data.h2020 = http://cordis.europa.eu/data/cordis-h2020projects-xml.zip
+data.fp7 = http://cordis.europa.eu/data/cordis-fp7projects-xml.zip
