--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,8 +6,8 @@ log4j.appender.R.File=application.log
 log4j.appender.R.MaxFileSize=100KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.MaxBackupIndex=1
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
-log4j.appender.stdout.layout.ConversionPattern=%-40.40c - %-5p - %m%n
+log4j.appender.R.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} %p %t %c - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} %c - %-5p - %m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 
